--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>Presstube</title>
+  <style type="text/css">
+    html, body {
+      margin: 0;
+    }
+  </style>
 </head>
 <body>
   <div id="app"></div>
