--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <style type="text/css">
     html, body {
       margin: 0;
+      font-family: "Lucida Console", Monaco, monospace;
     }
   </style>
 </head>
