--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Presstube</title>
+  <meta name="viewport" content="width=device-width"/>
   <style type="text/css">
     html, body {
       margin: 0;
