blocking in YES section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
       margin: 0;
       font-family: "Lucida Console", Monaco, monospace;
     }
+    a {
+      color: #222;
+      text-decoration: none;
+    }
+    ul {
+      /*list-style-type: none;*/
+    }
+    li {
+      margin-left: 0px;
+      margin-top: 4px;
+      margin-bottom: 4px;
+    }
   </style>
 </head>
 <body>
