--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     html, body {
       margin: 0;
       font-family: "Lucida Console", Monaco, monospace;
+      background-color: #eee;
     }
     a {
       color: #222;
