blocking in sketchbook project

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <title>Presstube</title>
   <meta name="viewport" content="width=device-width"/>
+  <!-- <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:100" rel="stylesheet"> -->
   <style type="text/css">
     html, body {
       margin: 0;
-      font-family: "Lucida Console", Monaco, monospace;
+      /*font-family: "Lucida Console", Monaco, monospace;*/
+      font-family: monospace;
       background-color: #eee;
     }
   </style>
