fixed brand shifting over with scrollbar

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       /*font-family: "Lucida Console", Monaco, monospace;*/
       font-family: monospace;
       background-color: #eee;
+      overflow-y: "scroll";
     }
   </style>
 </head>
