--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       overflow-y: "scroll";
     }
   </style>
+  <link rel="icon" type="image/png" href="http://presstube.com/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="http://presstube.com/favicon-16x16.png" sizes="16x16" />
+
 </head>
 <body>
   <div id="app"></div>
